# morning-brief

./: .env.example  .gitignore  .gitleaks.toml  .mise.toml  .pre-commit-config.yaml  .pymarkdown.json  CLAUDE.md  LICENSE  README.md  config.example.yaml  justfile  modal_app.py  pyproject.toml  renovate.json
.github/workflows/: ci.yml
docs/: agent-design.md  design.md  quality.md  requirements.md  setup.md  tasks.md
scripts/: bootstrap_oauth.py
seeds/: newsletter_digest.md  summarize_prompt.md  user_initial.md  user_md_update_prompt.md
src/digest/: config.py  formatter.py  gmail_client.py  hermes_bridge.py  models.py  observability.py  operations_notifier.py  seeds.py  state_store.py  summarize.py  user_md_updater.py  userdoc_notifier.py  userdoc_store.py
src/digest/notifiers/: base.py  slack.py
tests/architecture/: test_env_access_localized.py  test_gmail_send_not_used.py  test_no_gmail_sdk_outside_client.py  test_no_hermes_references.py  test_no_hermes_state_outside_bridge.py  test_no_secrets_in_code.py  test_no_slack_sdk_outside_notifier.py  test_no_socket_mode.py  test_no_vertex_ai.py  test_notifier_protocol.py  test_observability_imports.py  test_prompts_in_seeds.py
tests/integration/: test_gmail_client.py
tests/unit/: test_bootstrap_oauth.py  test_config.py  test_formatter.py  test_hermes_bridge.py  test_models.py  test_observability.py  test_operations_notifier.py  test_seeds.py  test_slack_notifier.py  test_state_store.py  test_summarize.py  test_user_md_updater.py  test_userdoc_notifier.py  test_userdoc_store.py
