[project]
name = "morning-brief"
version = "0.0.1"
description = "Morning newsletter digest as an ambient agent on Modal"
requires-python = ">=3.11"
dependencies = [
    "modal",
    "google-genai",
    "slack-sdk",
    "google-api-python-client",
    "google-auth-oauthlib",
    "pydantic>=2",
    "pyyaml",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-mock",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digest"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["googleapiclient.*", "google_auth_oauthlib.*", "modal.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "external: tests requiring real external API access (skipped by default in CI)",
]
