[project]
name = "morning-brief"
version = "0.0.1"
description = "Morning newsletter digest as an ambient agent on Modal"
requires-python = ">=3.11"
dependencies = [
    "modal",
    "pydantic-ai[google]",
    "slack-sdk",
    "google-api-python-client",
    "google-auth-oauthlib",
    "pydantic>=2",
    "pyyaml",
    "logfire>=2",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pyright",
    "pytest",
    "pytest-mock",
    "types-pyyaml",
    "pymarkdownlnt",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digest"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["googleapiclient.*", "google_auth_oauthlib.*", "google.oauth2.*", "google.auth.*", "modal.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
# slack_sdk の型スタブが **kwargs: Unknown を使っているため Unknown 系ルールを抑制する
# (mypy の ignore_missing_imports override と同じ位置付け: 外部ライブラリ起因のノイズ除去)
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
# google-api-python-client が型スタブを提供しないため抑制する
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
markers = [
    "external: tests requiring real external API access (skipped by default in CI)",
]
